k3s-manifest/gotify/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gotify
  labels:
    name: gotify
