k3s-manifest/gotify/gotify-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: gotify
  labels:
    app: gotify
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: gotify
